# Naranjelio_ws

./: README.md
docker/: Dockerfile  bashrc  naranjeliodocker.sh
docker/humblenaranjelio/install/: local_setup.sh  setup.sh
docker/humblenaranjelio/install/commsonboard/lib/commsonboard/: angle_reader
docker/humblenaranjelio/install/commsonboard/share/commsonboard/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
docker/humblenaranjelio/src/commsonboard/: setup.cfg  setup.py
naranjelio_gazebo/: CMakeLists.txt  package.xml
naranjelio_gazebo/worlds/: lab3_world.sdf
src/CSVAntiguos/: GA500g.csv  GAS3.csv  GAS5.csv  GAS7.csv  GB1500g.csv  GB1kg.csv  GB500g.csv  GBS3.csv  GBS5.csv  GBS6.csv  GBS7.csv  GBS9.csv  NPGBS3.csv  NPGBS5.csv  NPGBS7.csv  NWGAS5.csv  SPGAS3.csv  SPGAS7.csv  Still.csv
src/Movimiento/naranjelio_ws/: Readme.txt
src/Movimiento/naranjelio_ws/src/comms/: package.xml  setup.py
src/Movimiento/naranjelio_ws/src/comms/comms/: base_movements.py  imu_plotter.py
src/Sensores/: Readme.txt  Test IMU  TestCircularMotion.py  TestPCA.py
src/Sensores/altimu10v5/: test.py
